--- a/myapps/src/main/webapp/WEB-INF/pages/tpl/header.vm
+++ b/myapps/src/main/webapp/WEB-INF/pages/tpl/header.vm
@@ -1,3 +1,5 @@
-<script src="../js/import/jquery-1.7.2.min.js"></script>
-<script src="../js/import/angular.min.js"></script>
 <link href="../css/tpl/tpl.css" rel="stylesheet"> 
+<link href="../css/import/bootstrap.min.css" rel="stylesheet"> 
+<script src="../js/import/jquery-3.1.1.min.js"></script>
+<script src="../js/import/bootstrap.min.js"></script>
+<script src="../js/import/angular.min.js"></script>
